--- a/aboutus.html
+++ b/aboutus.html
@@ -29,9 +29,8 @@
     </h1>
     </div>
 <p>
-    Ex-Trend is more than just a fashion brand;
-    <br> it's a movement towards a more sustainable and ethical future.
-    <br> We believe that style doesn't have to come at the expense of our planet or the people who make our clothes.
+    It is a transition to a more sustainable and ethical future.<br>
+We believe that fashion does not have to be an enemy of our planet and the people who make clothes.
 </p>
 <section class="text">
     <div class="autoBlur">SAFE</div>
@@ -41,7 +40,7 @@
   </section>
   <img src="1.png" class="img">
   <p class="paragraph1">
-    At Ex-Trend, we prioritize ethical sourcing practices to ensure that our products are made in fair working conditions and with respect for the environment. We work directly with suppliers who share our commitment to sustainability and social responsibility. Our sourcing process involves rigorous checks to verify compliance with ethical standards, fair labor practices, and environmental regulations. By partnering with ethical suppliers, we contribute to a more just and sustainable fashion industry.</p1>
+   Ethics and Sustainability At Ex-Trend, our foremost concern is the way products are made: under decent working conditions and in an environmentally friendly way. That is why we directly cooperate only with suppliers who share our concerns regarding sustainability and social responsibility. Careful checks form part of our sourcing process to assure compliance with ethical standards, fair labor conditions, and environmental laws. In such a way, together with responsible suppliers, we can make fashion fairer and more ecological.</p1>
     <footer>
       <p class="footer">
         <a href="refrences.html">refrences</a>
